2012-04-10  Miklos Szeredi <miklos@szeredi.hu>

	* Check protocol version before sending notifications and return
	-ENOSYS if a particular notification is not supported.

2012-01-27  Miklos Szeredi <miklos@szeredi.hu>

	* Interpret octal escape codes in options.  Requested by Jan
	Engelhardt

2012-01-26  Miklos Szeredi <miklos@szeredi.hu>

	* Add man pages for fusermount, mount.fuse and ulockmgr_server.
	Lifted from the Debian package.  The man pages were written by
	Daniel Baumann and Bastien Roucaries

2012-01-13  Miklos Szeredi <miklos@szeredi.hu>

	* Disable symbol versions on MacOSX.  Patch by Anatol Pomozov

2012-01-02  Miklos Szeredi <miklos@szeredi.hu>

	* Remove unnecessary mutex unlock at the end of multithreaded
	event loop.

2011-12-09  Miklos Szeredi <miklos@szeredi.hu>

	* Fix hang in wait_on_path().  Reported by Ville Silventoinen

	* Don't unhash name in FORGET.  This resulted in ENOENT being
	returned for unlinked but still open files if the kernel sent a
	FORGET request for the parent directory.

	* Free request in fuse_reply_data().

2011-12-08  Miklos Szeredi <miklos@szeredi.hu>

	* Fix build if FUSE_NODE_SLAB is not defined.  Patch by Emmanuel
	Dreyfus

	* Check for availability of utimensat() function.  Patch by
	Emmanuel Dreyfus

2011-12-07  Miklos Szeredi <miklos@szeredi.hu>

	* Add fuse_lowlevel_notify_delete() which tells the kernel that a
	file or directory is deleted.  Patch by John Muir

2011-12-06  Miklos Szeredi <miklos@szeredi.hu>

	* Update retrieve_reply() method

2011-12-05  Miklos Szeredi <miklos@szeredi.hu>

	* Low level API: lock argument of fuse_reply_lock should have a
	'const' qualifier.  Reported by Shachar Sharon

	* Add support for ioctl on directories.  Reported by Antonio SJ
	Musumeci

2011-10-13  Miklos Szeredi <miklos@szeredi.hu>

	* Reply to request with ENOMEM in case of failure to allocate
	request structure.  Otherwise the task issuing the request will